# SalaryZenAggregator

./: .coveragerc  .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
salaryzenaggr/: __init__.py  constants.py  manager.py
salaryzenaggr/cmd/: aggregate.py
salaryzenaggr/fetchers/: __init__.py  alfa_currency_xml.py  cbr_xml.py  cbr_xml_dynamic.py  rest_api.py
salaryzenaggr/formatters/: __init__.py  json_formatter.py
salaryzenaggr/tests/: base.py  test_salaryzenaggr.py
salaryzenaggr/utils/: abstracts.py
tools/: aggregate.sh  aggregate_wrapper.sh
