[metadata]
name = SalaryZenAggregator
summary = SalaryZen Aggregator subproject
description-file =
    README.rst
author = Sergey Lukjanov
author-email = salaryzen@slukjanov.name
home-page = http://slukjanov.name
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    salaryzenaggr
