[metadata]
name = SalaryZenAggregator
summary = SalaryZen Aggregator subproject
description-file =
    README.rst
author = Sergey Lukjanov
author-email = salaryzen@slukjanov.name
home-page = http://slukjanov.name
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    salaryzenaggr

[entry_points]
console_scripts =
    salaryzen-aggregate = salaryzenaggr.cmd.aggregate:main

salaryzenaggr.fetchers =
    alfa-currency-xml = salaryzenaggr.fetchers.alfa_currency_xml:AlfaCurrencyXmlFetcher
    cbr-xml-dynamic = salaryzenaggr.fetchers.cbr_xml_dynamic:CbrXmlDynamicFetcher
